[gd_scene load_steps=8 format=3 uid="uid://b4vkyrbc8i4pw"]

[ext_resource type="Script" uid="uid://3bujxcyuxhcg" path="res://Pause Menu/pause_menu.gd" id="1_jkl7h"]
[ext_resource type="Texture2D" uid="uid://bl0y21jb8x7vh" path="res://Items/Sprites/items.png" id="2_3limv"]
[ext_resource type="PackedScene" uid="uid://5eph08lqh5fm" path="res://GUI/pause_menu/inventory/inventory_slot.tscn" id="3_0g3m2"]
[ext_resource type="Script" uid="uid://dv7bt0npnu16y" path="res://GUI/pause_menu/inventory/scripts/inventory_ui.gd" id="3_4x5p1"]
[ext_resource type="Resource" uid="uid://dpriqs3ic0hw6" path="res://GUI/pause_menu/inventory/player_inventory.tres" id="4_iss3t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0g3m2"]
atlas = ExtResource("2_3limv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4x5p1"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_0g3m2")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jkl7h")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.122252, 0.122252, 0.122252, 1)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "[paused]"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="LoadButton" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="ItemDescription" type="Label" parent="Control/CenterContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "farfdagre"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4x5p1")

[node name="GridContainer" type="GridContainer" parent="Control/CenterContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_4x5p1")
data = ExtResource("4_iss3t")

[node name="InventorySlot" parent="Control/CenterContainer/HBoxContainer/PanelContainer/GridContainer" instance=ExtResource("3_0g3m2")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/CenterContainer/HBoxContainer/PanelContainer/GridContainer" instance=ExtResource("3_0g3m2")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/CenterContainer/HBoxContainer/PanelContainer/GridContainer" instance=ExtResource("3_0g3m2")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/CenterContainer/HBoxContainer/PanelContainer/GridContainer" instance=ExtResource("3_0g3m2")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/CenterContainer/HBoxContainer/PanelContainer/GridContainer" instance=ExtResource("3_0g3m2")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/CenterContainer/HBoxContainer/PanelContainer/GridContainer" instance=ExtResource("3_0g3m2")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
